<resources>

    <string name="app_name">AR-Brands</string>
    <string name="title_activity_main">AR-Brands</string>

	<string name="picture">Picture</string>
	<string name="capture">Launch Camera</string>
	<string name="appname_upercase">APP-NAME</string>
	
	<string name="add_en">ADD</string>
	<string name="start_en">STSRT</string>
	
	
	<string name="imagesourct_en">Image Source</string>
	<string name="camera_en">CAMERA</string>
	<string name="gallery_en">GALLERY</string>
</resources>