<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_storke_white_light"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="#33b5e5"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/appname_upercase"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imagesourct_en"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:id="@+id/View01"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:background="#669900" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/btnCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/pic_border"
            android:drawableLeft="@drawable/ic_launcher"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="20dp"
            android:text="@string/camera_en"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/btnGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/pic_border"
            android:drawableLeft="@drawable/ic_launcher"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:text="@string/gallery_en"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

	<LinearLayout
	    android:id="@+id/btnBar"
	    style="@android:style/ButtonBar"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="right|center_vertical"
	    android:visibility="visible" >

		<ImageView
		    android:id="@+id/imageView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="5dp"
		    android:src="@android:drawable/ic_dialog_info" />

    </LinearLayout>
    
</LinearLayout>