<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_storke_white_light"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="#33b5e5"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/appname_upercase"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal" android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:alpha=".2"
            android:background="@drawable/pic_border"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ImageView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="10dp"
                android:alpha=".2"
                android:contentDescription="@string/start_en"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="10dp"
                android:alpha=".2"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/start_en"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/pic_border"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="10dp"
                android:src="@drawable/ic_launcher" android:contentDescription="@string/add_en"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/add_en"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>
    </LinearLayout>

	<LinearLayout
	    android:id="@+id/btnBar"
	    style="@android:style/ButtonBar"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="right|center_vertical"
	    android:visibility="visible" >

		<ImageView
		    android:id="@+id/imageView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="5dp"
		    android:src="@android:drawable/ic_dialog_info" />

    </LinearLayout>
    
</LinearLayout>